# initc

./: initc.sh  install.sh
rootfs/: CMakeLists.txt
rootfs/src/: CMakeLists.txt
